# visual-compare-pdf

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: pdf_compare.h
src/: bindings.cpp  main.cpp  pdf_compare.cpp
web/: index.html
